# ECPSCollector

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  config.gcc  ecpscollector.rc
ci/: conanfile.py
doc/: Описание программы для приёма данных.docx  Протокол обмена данных.docx
include/: chunk.h  comdialog.h  comreader.h  filewriter.h  functions.h  graph.h  main.h  mainform.h
src/: chunk.cpp  comdialog.cpp  comreader.cpp  filewriter.cpp  functions.cpp  graph.cpp  main.cpp  mainform.cpp
